# platform.core.security.device-policy-manager

./: CMakeLists.txt  Policies  README.md  device-policy-manager.manifest  measure.sh
common/: CMakeLists.txt  access-control.cxx  access-control.hxx  array.h  backtrace.cpp  backtrace.h  cryptofs.cpp  cryptofs.h  data-type.h  data-type.hxx  ecryptfs-common.h  ecryptfs.h  error.cpp  error.cxx  error.h  error.hxx  eventfd.cpp  eventfd.cxx  eventfd.h  eventfd.hxx  exception.h  exception.hxx  file-descriptor.h  file-descriptor.hxx  filesystem.cpp  filesystem.cxx  filesystem.h  filesystem.hxx  group.cxx  group.hxx  iterator.h  keyctl.cpp  keyctl.h  keymngt.cpp  keymngt.h  mainloop.cpp  mainloop.h  object-latch.h  object-latch.hxx  pam-app.cxx  (+31 more)
common/audit/: console-sink.cpp  console-sink.cxx  console-sink.h  console-sink.hxx  logger.cpp  logger.cxx  logger.h  logger.hxx  logsink.h  logsink.hxx  null-sink.cxx  null-sink.h  null-sink.hxx
common/auth/: group.cpp  group.h  shadow.cpp  shadow.h  user.cpp  user.h
common/db/: column.cpp  column.cxx  column.h  column.hxx  connection.cpp  connection.cxx  connection.h  connection.hxx  statement.cpp  statement.cxx  statement.h  statement.hxx
common/dbus/: connection.cpp  connection.h  error.cpp  error.h  variant.cpp  variant.h
common/ipc/: callback-holder.hxx  client.cxx  client.hxx  connection.cxx  connection.hxx  mainloop.cxx  mainloop.hxx  message.cxx  message.hxx  notification.cxx  notification.hxx  service.cxx  service.hxx  socket.cxx  socket.hxx
common/key/: generator.cpp  generator.h  manager.cpp  manager.h  ring.cpp  ring.h
common/rmi/: callback-holder.h  client.cpp  client.h  connection.cpp  connection.h  message-composer.cpp  message-composer.h  message.cpp  message.h  notification.cpp  notification.h  service.cpp  service.h  socket.cpp  socket.h
common/shadow/: group.cxx  group.hxx  lock.cxx  lock.hxx  user.cxx  user.hxx
common/xml/: document.cpp  document.cxx  document.h  document.hxx  keepblanks.cpp  keepblanks.cxx  keepblanks.h  keepblanks.hxx  node.cpp  node.cxx  node.h  node.hxx  parser.cpp  parser.cxx  parser.h  parser.hxx
libs/: CMakeLists.txt  administration.cpp  administration.cxx  application.cpp  bluetooth.cpp  camera.cpp  container.cxx  datashare.cpp  developer.cpp  device-policy-client.h  dpm.cpp  dpm.hxx  dpm.pc.in  geofence.cpp  ivi.cmake  location.cpp  misc.cpp  mobile.cmake  password.cpp  password.cxx  policy-client.cpp  policy-client.cxx  policy-client.h  policy-client.hxx  policy-context.hxx  record.cpp  restriction.cpp  restriction.cxx  security.cpp  security.cxx  settings.cpp  storage.cpp  tv.cmake  wearable.cmake  wifi.cpp  zone-app-manager.cpp  zone-package-manager.cpp  zone.cpp  zone.cxx
libs/dpm/: .zone.cpp.swp  administration.cpp  administration.h  application.cpp  application.h  bluetooth.cpp  bluetooth.h  camera.cpp  camera.h  capi-assert.h  client-handle.cpp  container.cxx  container.h  context.h  datashare.cpp  datashare.h  debug.h  developer.cpp  developer.h  device-policy-client.h  device-policy-manager.h  dpm.h  geofence.cpp  geofence.h  misc.cpp  misc.h  password.cpp  password.cxx  password.h  record.cpp  record.h  restriction.cpp  restriction.cxx  restriction.h  security.cpp  security.cxx  security.h  settings.cpp  settings.h  storage.cpp  (+8 more)
libs/zone/: app-info.h  package-info.h
pam/: CMakeLists.txt
pam/cli/: activate-zone  nsattach.cpp  nsattach.cxx
pam/module/: mount.cxx  mount.hxx  pam-module.cxx  pam-module.hxx  pam-unshare.cxx  pam-unshare.hxx  zone.cpp  zone.cxx
pam/pam.d/: nsattach
server/: CMakeLists.txt  administration.cpp  administration.cxx  app-bundle.cpp  app-bundle.h  application.cpp  bluetooth.cpp  camera.cpp  client-manager.cpp  client-manager.cxx  client-manager.h  client-manager.hxx  common.cmake  container.cxx  datashare.cpp  developer.cpp  geofence.cpp  ivi.cmake  krate.cpp  launchpad.cpp  launchpad.h  location.cpp  main.cpp  main.cxx  misc.cpp  mobile.cmake  package-info-internal.h  packman.cpp  packman.h  password.cpp  password.cxx  policy-builder.cpp  policy-builder.h  policy-context.hxx  policy-helper.h  policy-manager.cpp  policy-manager.h  policy-storage.cpp  policy-storage.cxx  policy-storage.h  (+26 more)
server/data/: DefaultBundleManifest.xml  PolicyManifest.xml
server/systemd/: device-policy-manager.service.in
server/zone/: .zone.cpp.swp  app-manager.cpp  app-proxy.cpp  package-manager.cpp  package-proxy.cpp  zone.cpp
src/libs/: CMakeLists.txt  admin.c  connect.c  dp-bus.c  dp-bus.h  libdpm.pc.in  log.c  log.h  policy.c
src/server/: CMakeLists.txt  main.c
tests/api/: CMakeLists.txt  admin.c  application.c  bluetooth.c  common.cmake  context.c  datashare.c  developer.c  ivi.cmake  main.c  manager.c  misc.c  mobile.cmake  password.c  restriction.c  security.c  settings.c  storage.c  testbench.c  testbench.h  tv.cmake  wearable.cmake  wifi.c  zone.c
tests/integration/: CMakeLists.txt  administration.cpp  administration.cxx  application.cpp  bluetooth.cpp  container.cxx  main.cpp  main.cxx  misc.cpp  mobile.cmake  restriction.cpp  restriction.cxx  security.cpp  security.cxx  tv.cmake  zone.cpp  zone.cxx
tests/unit/: CMakeLists.txt  database.cpp  database.cxx  dbus.cpp  eventfd.cpp  filesystem.cpp  filesystem.cxx  ipc.cxx  logger.cpp  main.cpp  main.cxx  misc.cpp  proc.cpp  rmi.cpp  shadow.cpp  shadow.cxx  xml.cpp  xml.cxx
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  dpm-admin-cli.cpp  factory-reset  zone-tui.cpp
tools/dpm-cli-toolkit/: CMakeLists.txt  bluetooth.c  dpm-cli-toolkit.c  dpm-cli-toolkit.h  main.c  password.c  restriction.c  zone.c
tools/dpm-cml-toolkit/: CMakeLists.txt  bluetooth.c  dpm-cml-toolkit.c  main.c  password.c  restriction.c  zone.c
tools/ode/: CMakeLists.txt  org.tizen.ode.xml
tools/ode-app/: CMakeLists.txt  org.tizen.ode-app.xml
tools/syspopup/: CMakeLists.txt  org.tizen.dpm-syspopup.xml
tools/zone-setup-wizard/: CMakeLists.txt  org.tizen.zone-setup-wizard.xml
zone/: CMakeLists.txt  session.cpp  zone-builder.cpp
zone/apps/: CMakeLists.txt
zone/cli/: CMakeLists.txt  zone-admin-cli.cpp
(+184 files in other folders)
