#
# Copyright (c) 2015 Samsung Electronics Co., Ltd All Rights Reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(device-policy-manager)

IF(NOT DEFINED VERSION)
	SET(VERSION "0.0.1")
ENDIF(NOT DEFINED VERSION)

INCLUDE(FindPkgConfig)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(DPM_COMMON ${PROJECT_SOURCE_DIR}/common)
SET(DPM_POLICY ${PROJECT_SOURCE_DIR}/policy)
SET(DPM_LIBS   ${PROJECT_SOURCE_DIR}/libs)
SET(DPM_SERVER ${PROJECT_SOURCE_DIR}/server)
SET(DPM_TESTS  ${PROJECT_SOURCE_DIR}/tests)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
	SET(CXX_STD "c++0x")
else()
	SET(CXX_STD "c++11")
endif()

SET(COMPILE_BASE_FLAGS		"-g -fPIC -Werror -Wall")
SET(CMAKE_C_FLAGS_PROFILING	"${COMPILE_BASE_FLAGS} -O0 -pg")
SET(CMAKE_CXX_FLAGS_PROFILING	"${COMPILE_BASE_FLAGS} -O0 -pg -std=${CXX_STD}")
SET(CMAKE_C_FLAGS_DEBUG		"${COMPILE_BASE_FLAGS} -O0 -ggdb")
SET(CMAKE_CXX_FLAGS_DEBUG	"${COMPILE_BASE_FLAGS} -O0 -ggdb -std=${CXX_STD}")
SET(CMAKE_C_FLAGS_RELEASE	"${COMPILE_BASE_FLAGS} -O2 -DNDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE	"${COMPILE_BASE_FLAGS} -O2 -DNDEBUG -std=${CXX_STD}")
SET(CMAKE_C_FLAGS_CCOV		"${COMPILE_BASE_FLAGS} -O0 --coverage")
SET(CMAKE_CXX_FLAGS_CCOV	"${COMPILE_BASE_FLAGS} -O0 --coverage -std=${CXX_STD}")

IF(NOT DEFINED LIB_INSTALL_DIR)
	SET(LIB_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
ENDIF(NOT DEFINED LIB_INSTALL_DIR)

IF(NOT DEFINED INCLUDE_INSTALL_DIR)
	SET(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}")
ENDIF(NOT DEFINED INCLUDE_INSTALL_DIR)

IF(NOT DEFINED SCRIPT_INSTALL_DIR)
	SET(SCRIPT_INSTALL_DIR "${CMAKE_INSTALL_SBINDIR}")
ENDIF(NOT DEFINED SCRIPT_INSTALL_DIR)

IF(NOT DEFINED DATA_INSTALL_DIR)
	SET(DATA_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share")
ENDIF(NOT DEFINED DATA_INSTALL_DIR)

IF(NOT DEFINED POLICY_INSTALL_DIR)
	SET(POLICY_INSTALL_DIR "${SYSCONF_INSTALL_DIR}/dpm/policy")
ENDIF(NOT DEFINED POLICY_INSTALL_DIR)

IF(NOT DEFINED SYSTEMD_UNIT_INSTALL_DIR)
	SET(SYSTEMD_UNIT_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
ENDIF(NOT DEFINED SYSTEMD_UNIT_INSTALL_DIR)

ADD_SUBDIRECTORY(${DPM_SERVER})
ADD_SUBDIRECTORY(${DPM_LIBS})
ADD_SUBDIRECTORY(${DPM_TESTS})
